refactor(bicycle/network): quiet a few LinkElevationProfile inspections